add spacings between lis; fix issue with xp & edu switch

--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
 					<img src="./sims.png" alt="picture" id="avatar">
 				</div>
 				<div class="contact_wrap pb">
-					<div class="title">
-						PING ME 
+					<div class="title ping en">
+						also PING ME in
+					</div>
+					<div class="title ping de hidden">
+						PING MICH auch AUF
+					</div>
+					<div class="title ping bg hidden">
+						PING-ни ме и на
 					</div>
 					<!-- Language slider -->
 					<div class="languages">
@@ -41,16 +47,6 @@
 					</div>
 					<div class="contact">
 						<ul>
-							<li>
-								<div class="li_wrap">
-
-									<div class="icon"><button class="print-button" onclick="window.print()"><span
-												class="print-icon"></span></button></i></div>
-									<div class="text" class="printpage">
-										print
-									</div>
-								</div>
-							</li>
 							<li>
 								<div class="li_wrap">
 									<div class="icon"><a href="mailto:iv.svetlin@outlook.com" style="color:#b8977c"><i class="fas fa-envelope" aria-hidden="true"></i></a></div>
@@ -77,6 +73,22 @@
 									<div class="text bg hidden">
 										1618 | София, България
 									</div>
+								</div>
+							</li>
+							<li>
+								<div class="li_wrap">
+
+									<div class="icon"><button class="print-button" onclick="window.print()"><span class="print-icon"></span></button></i></div>
+									<div class="en"><div class="text" class="printpage">
+										print
+									</div>
+								</div>
+									<div class="de hidden"><div class="text" class="printpage">
+										Ausdruck
+									</div></div>
+									<div class="bg hidden"><div class="text" class="printpage">
+										печат
+									</div></div>
 								</div>
 							</li>
 						</ul>
@@ -457,9 +469,7 @@
 						<div id="education-panel" class="panel">
 						  <!-- Content for EDUCATION panel -->
 						  <div class="education">
-							<div class="title">
-								Education & Personal 
-							</div>
+				
 							<div class="education_wrap">
 								<ul>
 									<li>
@@ -471,8 +481,14 @@
 												<p class="info_title">
 													Lived & worked abroad  
 												</p>
-												<p class="info_com">
-												Chemnitz, Germany  <br><br>  Lisbon, Portugal  <br><br>  Berlin, Germany <br><br> Got deeply involved in crypto in early 2016.   
+												<p class="info_com en">
+												Chemnitz, Germany  <br><br>  Lisbon, Portugal  <br><br>  Berlin, Germany <br><br>    
+												</p>
+												<p class="info_com de hidden">
+												Chemnitz, Deutschland  <br><br>  Lissabon, Portugal  <br><br>  Berlin, Deutschland <br><br>  
+												</p>
+												<p class="info_com bg hidden">
+												Кемниц, Германия  <br><br>  Лисабон, Португалия  <br><br>  Берлин, Германия <br><br>   
 												</p>
 												<p class="info_cont">
 													<!-- TO BE FILLED IN -->
@@ -489,12 +505,22 @@
 												<p class="info_title">
 												Erasmus & EVS (European Voluntary Service)  
 												</p>
-												<p class="info_com">
+												<p class="info_com en">
 													C1 - C2 in German & English, certified
 												</p>
-												<p class="info_cont">
-													I took part in an EVS program in Berlin & further Erasmus experiences on the topics of Business & Entrepreneurship.
+												<p class="info_com de hidden">
+													C1 - C2 in Deutsch & Englisch, zertifiziert
 												</p>
+												<p class="info_com bg hidden">
+													C1 - C2 ниво според Европейската езикова рамка на английски и немски
+												</p>
+												<p class="info_cont en">
+													I participated in an EVS programme in Berlin and gained further Erasmus experience on business and entrepreneurship.												</p>
+												<p class="info_cont de hidden">
+													Ich habe an einem EFD-Programm in Berlin teilgenommen und weitere Erasmus-Erfahrungen zu den Themen Wirtschaft und Unternehmertum gesammelt.												
+												</p>
+												<p class="info_cont bg hidden">
+													Участвах в програма ЕДС в Берлин и натрупах допълнителен опит по програма "Еразъм" в областта на бизнеса и предприемачеството.												</p>
 											</div>
 										</div>
 									</li>
@@ -504,15 +530,31 @@
 												2012 - 2016
 											</div>
 											<div class="info">
-												<p class="info_title">
+												<p class="info_title en">
 													Bachelor graduate of Journalism @ Sofia University
 												</p>
-												<p class="info_com">
+												<p class="info_title de hidden">
+													Bachelor-Abschluss in Journalismus an der Universität Sofia
+												</p>
+												<p class="info_title bg hidden">
+													Бакалавърска степен по журналистика @ Софийски университет
+												</p>
+												<p class="info_com en">
 													Faculty of Media and Mass Communication
 												</p>
-												<p class="info_cont">
+												<p class="info_com de hidden">
+													Fakultät für Medien und Massenkommunikation
+												</p>
+												<p class="info_com bg hidden">
+													Faculty of Media and Mass Communication
+												</p>
+												<p class="info_cont en">
 													I specialised in International Relations, Data Journalism (Print & Web Design).
 												</p>
+												<p class="info_cont de hidden">
+													Ich habe mich auf internationale Beziehungen und Datenjournalismus (Print- und Webdesign) spezialisiert.												</p>
+												<p class="info_cont bg hidden">
+													Специализирах в областта на международните отношения, журналистиката на данни за печат и уеб дизайн.												</p>
 											</div>
 										</div>
 									</li>
@@ -525,8 +567,14 @@
 												<p class="info_title">
 													18 high-school William Gladstone, Sofia
 												</p>
-												<p class="info_com">
-													Natural Science & Informatics  
+												<p class="info_com en">
+													Natural Science & Informatics / STEM  
+												</p>
+												<p class="info_com de hidden">
+													Naturwissenschaften 
+												</p>
+												<p class="info_com bg hidden">
+													Природни науки и математика
 												</p>
 												<p class="info_cont">
 													<!-- TO BE FILLED IN -->
