--- a/index.html
+++ b/index.html
@@ -250,20 +250,20 @@
 							Светлин И.
 						</div>
 						<div class="role en">
-							Technical Analyst
+							Technical Analyst & SW Dev
 						</div>
 						<div class="role de hidden">
-							Technischer Analyst
+							Technischer Analyst & Entwickler
 						</div>
 						<div class="role bg hidden">
-							Технически аналзатор
+							Технически аналзатор & софтуерен разработчик 
 						</div>
 					</div>
 					<div class="about text en">
 						I am an ex-journalist, and a digital native keeping strong interest in technology
 						demonstrated in my professional experience throughout the
 						years. My knowledge of Windows and Linux, coupled with
-						scripting in bash, Python, experience working as a Technical Analyst,
+						scripting in bash, Python, experience working as a Technical Analyst & Developer,
 						using the full-stack of technologies utilized in both DevOps & ITOps teams has most
 						recently made me a good fit for the Bulgarian IT industry. 
 					</div>
@@ -271,7 +271,7 @@
 						Ich bin ein ehemaliger Journalist und ein Digital Native, der ein starkes Interesse an Technologie hat, was sich in meiner beruflichen Erfahrung über die Jahre hinweg zeigt. Meine Kenntnisse von Windows und Linux, gepaart mit Skripten in Bash und Python, meine Erfahrung als technischer Analyst und die Verwendung von Technologien, die sowohl in DevOps- als auch in ITOps-Teams eingesetzt werden, haben mich für die bulgarische IT-Branche prädestiniert.
 					</div>
 					<div class="about text bg hidden">
-						Аз съм бивш журналист и  гражданин на дигиталния свят понастоящем, който има силен интерес към технологиите, доказан в професионалния ми опит през годините. Познанията ми за Windows и Linux, съчетани със скриптове на bash и Python, опитът ми като технически анализатор, използването на пълния набор от технологии, използвани както в DevOps, така и в ITOps екипи, ме направиха подходящ за българската ИТ индустрия.					</div>
+						Аз съм бивш журналист и  гражданин на дигиталния свят понастоящем, който има силен интерес към технологиите, доказан в професионалния ми опит през годините. Познанията ми за Windows и Linux, съчетани с умения за скриптиране на bash и Python, опитът ми като технически анализатор и софтуерен разработчик, използването на пълния набор от технологии, както от сферата на DevOps, така и ITOps, ме направиха подходящ за българската ИТ индустрия.					</div>
 				</div>
 				<div class="right_inner">
 					<div class="exp">
@@ -475,6 +475,21 @@
 									<li>
 										<div class="li_wrap">
 											<div class="date">
+												2019 - 2023
+											</div>
+											<div class="info">
+												<p class="info_title">
+													SoftUni Python Path; + Pluralsight & Udemy
+												</p>
+							
+												<p class="info_cont">
+													Basics, Fundamentals, Advanced, Python Web Development  												</p>
+											</div>
+										</div>
+									</li>
+									<li>
+										<div class="li_wrap">
+											<div class="date">
 												2017 - 2019
 											</div>
 											<div class="info">
@@ -499,14 +514,14 @@
 									<li>
 										<div class="li_wrap">
 											<div class="date">
-												2017 Test DaF (Deutsch als Fremdsprache) & IELTS 
+												2017 
 											</div>
 											<div class="info">
 												<p class="info_title">
 												Erasmus & EVS (European Voluntary Service)  
 												</p>
 												<p class="info_com en">
-													C1 - C2 in German & English, certified
+													C1 - C2 in German & English, certified by Test DaF (Deutsch als Fremdsprache) & IELTS which I acquired at the time.
 												</p>
 												<p class="info_com de hidden">
 													C1 - C2 in Deutsch & Englisch, zertifiziert
