--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="./styles.css">
 	<link rel="stylesheet" href="./language.css">
 	<link rel="stylesheet" href="./experiences.css">
+	<link rel="stylesheet" href="./responsive.css">
 	<script type="text/javascript" src="./experiences.js"></script>
 	<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 	<script type="text/javascript" src="./language.js"></script>
