correct copyToClipboard('iv.svetlin@outlook.com')

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<div class="li_wrap">
 									<div class="icon"><a href="mailto:iv.svetlin@outlook.com" style="color:#b8977c"><i class="fas fa-envelope" aria-hidden="true"></i></a></div>
 									<div class="text">									
-										iv.svetlin@outlook.com <span class="copy-icon" ontouchstart="window.print()" onclick="copyToClipboard('iv.svetlin@outlook.com')" title="Copy email address"><i class="fas fa-clipboard" style="color:#b8977c; font-size: 11px;"></i></span>
+										iv.svetlin@outlook.com <span class="copy-icon" ontouchstart="copyToClipboard('iv.svetlin@outlook.com')" onclick="copyToClipboard('iv.svetlin@outlook.com')" title="Copy email address"><i class="fas fa-clipboard" style="color:#b8977c; font-size: 11px;"></i></span>
 									</div>
 								</div>
 							</li>
