commit styles for eco friednly disclaimer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="./language.css">
 	<link rel="stylesheet" href="./experiences.css">
 	<link rel="stylesheet" href="./responsive.css">
+	<link rel="stylesheet" href="./print.css">
 	<script type="text/javascript" src="./experiences.js"></script>
 	<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 	<script type="text/javascript" src="./language.js"></script>
@@ -78,7 +79,6 @@
 							</li>
 							<li>
 								<div class="li_wrap">
-
 									<div class="icon"><button class="print-button" ontouchstart="window.print()" onclick="window.print()"><span class="print-icon"></span></button></i></div>
 									<div class="en"><div class="text" class="printpage">
 										print
@@ -90,6 +90,18 @@
 									<div class="bg hidden"><div class="text" class="printpage">
 										печат
 									</div></div>
+									<div class="tooltip en questionmark"> 
+										<span class="questionmark">&nbsp?</span>
+										<span class="tooltiptext">* Printing an A4 page adds to humanity's bill circa 10L of water, 6g CO2, 10Wh energy or 10g wood pulp (fraction of a tree).</span>
+									  </div>
+									  <div class="tooltip de hidden questionmark">										<span class="questionmark">&nbsp?</span>
+
+										<span class="tooltiptext">* Das Drucken einer A4-Seite verbraucht etwa 10 Liter Wasser, emittiert etwa 6 Gramm CO2 und benötigt etwa 10 Wattstunden Energie oder 10 Gramm Holzzellstoff (ein Bruchteil eines Baumes).</span>
+									  </div>
+									  <div class="tooltip bg hidden questionmark">										<span class="questionmark">&nbsp?</span>
+
+										<span class="tooltiptext">* Принтирането на една A4 страница изразходва приблизително около 10 литра вода, около 6 грама CO2, 10 ват-часа енергия или около 10 грама дървесина.</span>
+									  </div>
 								</div>
 							</li>
 						</ul>
