add translation to technical skikls & hobbies

--- a/index.html
+++ b/index.html
@@ -133,8 +133,14 @@
 							</div>
 						</div>
 						<div class="skills_wrap pb">
-							<div class="title">
+							<div class="title en">
 								TECH STACK
+							</div>
+							<div class="title de hidden">
+								TECHNISCHE KENNTNISSE
+							</div>
+							<div class="title bg hidden">
+								Технически умения
 							</div>
 							<div class="skills">
 								<ul>
@@ -204,8 +210,14 @@
 							</div>
 						</div>
 						<div class="hobbies_wrap pb">
-							<div class="title">
-								Hobbies
+							<div class="title en">
+								interests
+							</div>
+							<div class="title de hidden">
+								freizeit
+							</div>
+							<div class="title bg hidden">
+								интереси
 							</div>
 							<div class="hobbies">
 								<ul>
