--- a/index.html
+++ b/index.html
@@ -643,6 +643,75 @@
 													</div>
 												</div>
 											</li>
+											<li>
+												<div class="li_wrap">
+													<div class="date en">
+														September 2019 - October 2020
+													</div>
+													<div class="date de hidden">
+														September 2019 - Oktober 2020
+													</div>
+													<div class="date bg hidden">
+														септември 2019 - октомври 2020
+													</div>
+													<div class="info">
+														<p class="info_title en">
+															Software Lifecycle Services Implementation Engineer
+
+
+
+
+ (Application Packaging & System Administration)
+														</p>
+														<p class="info_title de hidden">
+															Software Lifecycle Services Implementation Engineer
+
+
+
+
+ (Anwendungspaketierung und Systemverwaltung)														</p>
+														<p class="info_title bg hidden">
+															Инженер по внедряване на софтуер и неговия жизнен цикъл (пакетиране на приложения и системно администриране)
+														</p>
+														<p class="info_com">
+															DXC Technology
+														</p>
+														<p class="info_cont en">
+															Part of a Software Packaging Team, preparing applications, security updates and patches, plugins and Addins for popular applications for mass deployment using variety of different deployment technologies.
+															- Office 365 & Adobe Application Packaging
+															- Source validation (.msi file validation and test)
+															- Patch & Update Testing
+															- Microsoft Patch Tuesday
+															- Packaging Request Forms and general packaging documentation
+															- Service Knowledge Transfer responsibility
+															- Working with VMWare, vSphere ESXi, VirtualBox, HyperV, InstallShield, Flexera AdminStudio, MS
+															Sysinternals, cmd.exe, PowerShell App Deployment Toolkit, etc
+														</p>
+														<p class="info_cont de hidden">
+															Teil eines Softwarepaketierungsteams, das Anwendungen, Sicherheitsupdates und Patches, Plugins und Addins für beliebte Anwendungen für die Massenbereitstellung unter Verwendung einer Vielzahl verschiedener Bereitstellungstechnologien vorbereitet.
+															- Office 365 & Adobe Anwendungspaketierung
+															- Quellenvalidierung (.msi-Datei-Validierung und -Test)
+															- Patch- und Update-Tests
+															- Microsoft Patch-Dienstag
+															- Formulare für Paketierungsanfragen und allgemeine Paketierungsdokumentation
+															- Zuständigkeit für Service Knowledge Transfer
+															- Arbeiten mit VMWare, vSphere ESXi, VirtualBox, HyperV, InstallShield, Flexera AdminStudio, MS
+															Sysinternals, cmd.exe, PowerShell App Deployment Toolkit, usw.
+														</p>
+														<p class="info_cont bg hidden">
+															член на екип за опаковане на софтуер, който подготвя приложения, актуализации на сигурността и кръпки, плъгини и добавки за популярни приложения за масово внедряване, като използва различни технологии за внедряване.
+- Пакетиране на приложения за Office 365 и Adobe
+- Валидиране на източника (валидиране и тестване на файлове .msi)
+- Тестване на кръпки и актуализации
+- Microsoft Patch Tuesday
+- Формуляри за заявки за пакетиране и обща документация за пакетиране
+- Отговорност за трансфер на знания за услугите
+- Работа с VMWare, vSphere ESXi, VirtualBox, HyperV, InstallShield, Flexera AdminStudio, MS
+Sysinternals, cmd.exe, PowerShell App Deployment Toolkit и др.
+														</p>
+													</div>
+												</div>
+											</li>
 										</ul>
 									</div>
 								</div>
