add index, styles, si_profile (new profile picture file)

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 			<div class="gradient">
 				<div class="resume">
 					<div class="left">
-						<div class="img_holder">
-							<img src="./sims.png" alt="picture" id="avatar">
-						</div>
+						<div id="profile-pic-container"> <!--  -->
+							<div class="img_holder">
+								<img src="./si_profile.jpeg" alt="picture" id="avatar">
+							</div>
+						</div><!--  -->
 						<div class="contact_wrap pb">
 							<div class="title ping en">
 								also PING ME in
@@ -165,20 +167,20 @@
 									<li>
 										<div class="li_wrap">
 											<div class="icon"><i class="fab fa-php"></i></div>
-											<div class="text">PHP</div>
+											<a href="https://onecompiler.com/users/3x5m7v454/codes"><div class="text">PHP</div></a>
 										</div>
 									</li>
 									<li>
 										<div class="li_wrap">
 											<div class="icon"><i class="fab fa-docker"></i></div>
-											<div class="text">Docker</div>
+											<a href="https://hub.docker.com/repository/docker/svlnivn/wpdock/general"><div class="text">Docker</div></a>
 										</div>
 									</li>
 									<li>
 										<div class="li_wrap">
 											<div class="icon"><i class="fab fa-python"></i></div>
-											<a href="http://ride-calc.tk/">
-												<div class="text">Python</div>
+											<a href="https://yamadasan.pythonanywhere.com/">
+												<a href="https://onecompiler.com/users/3x5m7v454/codes"><div class="text">Python</div></a>
 											</a>
 										</div>
 									</li>
@@ -190,13 +192,58 @@
 									</li>
 									<li>
 										<div class="li_wrap">
+											<div class="icon">
+												<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 640 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M180.41 203.01c-.72 22.65 10.6 32.68 10.88 39.05a8.164 8.164 0 0 1-4.1 6.27l-12.8 8.96a10.66 10.66 0 0 1-5.63 1.92c-.43-.02-8.19 1.83-20.48-25.61a78.608 78.608 0 0 1-62.61 29.45c-16.28.89-60.4-9.24-58.13-56.21-1.59-38.28 34.06-62.06 70.93-60.05 7.1.02 21.6.37 46.99 6.27v-15.62c2.69-26.46-14.7-46.99-44.81-43.91-2.4.01-19.4-.5-45.84 10.11-7.36 3.38-8.3 2.82-10.75 2.82-7.41 0-4.36-21.48-2.94-24.2 5.21-6.4 35.86-18.35 65.94-18.18a76.857 76.857 0 0 1 55.69 17.28 70.285 70.285 0 0 1 17.67 52.36l-.01 69.29zM93.99 235.4c32.43-.47 46.16-19.97 49.29-30.47 2.46-10.05 2.05-16.41 2.05-27.4-9.67-2.32-23.59-4.85-39.56-4.87-15.15-1.14-42.82 5.63-41.74 32.26-1.24 16.79 11.12 31.4 29.96 30.48zm170.92 23.05c-7.86.72-11.52-4.86-12.68-10.37l-49.8-164.65c-.97-2.78-1.61-5.65-1.92-8.58a4.61 4.61 0 0 1 3.86-5.25c.24-.04-2.13 0 22.25 0 8.78-.88 11.64 6.03 12.55 10.37l35.72 140.83 33.16-140.83c.53-3.22 2.94-11.07 12.8-10.24h17.16c2.17-.18 11.11-.5 12.68 10.37l33.42 142.63L420.98 80.1c.48-2.18 2.72-11.37 12.68-10.37h19.72c.85-.13 6.15-.81 5.25 8.58-.43 1.85 3.41-10.66-52.75 169.9-1.15 5.51-4.82 11.09-12.68 10.37h-18.69c-10.94 1.15-12.51-9.66-12.68-10.75L328.67 110.7l-32.78 136.99c-.16 1.09-1.73 11.9-12.68 10.75h-18.3zm273.48 5.63c-5.88.01-33.92-.3-57.36-12.29a12.802 12.802 0 0 1-7.81-11.91v-10.75c0-8.45 6.2-6.9 8.83-5.89 10.04 4.06 16.48 7.14 28.81 9.6 36.65 7.53 52.77-2.3 56.72-4.48 13.15-7.81 14.19-25.68 5.25-34.95-10.48-8.79-15.48-9.12-53.13-21-4.64-1.29-43.7-13.61-43.79-52.36-.61-28.24 25.05-56.18 69.52-55.95 12.67-.01 46.43 4.13 55.57 15.62 1.35 2.09 2.02 4.55 1.92 7.04v10.11c0 4.44-1.62 6.66-4.87 6.66-7.71-.86-21.39-11.17-49.16-10.75-6.89-.36-39.89.91-38.41 24.97-.43 18.96 26.61 26.07 29.7 26.89 36.46 10.97 48.65 12.79 63.12 29.58 17.14 22.25 7.9 48.3 4.35 55.44-19.08 37.49-68.42 34.44-69.26 34.42zm40.2 104.86c-70.03 51.72-171.69 79.25-258.49 79.25A469.127 469.127 0 0 1 2.83 327.46c-6.53-5.89-.77-13.96 7.17-9.47a637.37 637.37 0 0 0 316.88 84.12 630.22 630.22 0 0 0 241.59-49.55c11.78-5 21.77 7.8 10.12 16.38zm29.19-33.29c-8.96-11.52-59.28-5.38-81.81-2.69-6.79.77-7.94-5.12-1.79-9.47 40.07-28.17 105.88-20.1 113.44-10.63 7.55 9.47-2.05 75.41-39.56 106.91-5.76 4.87-11.27 2.3-8.71-4.1 8.44-21.25 27.39-68.49 18.43-80.02z"/></svg>
+											</div>
+											<div class="text">AWS</div>
+										</div>
+									</li>
+									<li>
+										<div class="li_wrap">
+											<div class="icon">
+												<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#949494}</style><path d="M333.5,201.4c0-22.1-15.6-34.3-43-34.3h-50.4v71.2h42.5C315.4,238.2,333.5,225,333.5,201.4z M517,188.6 c-9.5-30.9-10.9-68.8-9.8-98.1c1.1-30.5-22.7-58.5-54.7-58.5H123.7c-32.1,0-55.8,28.1-54.7,58.5c1,29.3-0.3,67.2-9.8,98.1 c-9.6,31-25.7,50.6-52.2,53.1v28.5c26.4,2.5,42.6,22.1,52.2,53.1c9.5,30.9,10.9,68.8,9.8,98.1c-1.1,30.5,22.7,58.5,54.7,58.5h328.7 c32.1,0,55.8-28.1,54.7-58.5c-1-29.3,0.3-67.2,9.8-98.1c9.6-31,25.7-50.6,52.1-53.1v-28.5C542.7,239.2,526.5,219.6,517,188.6z M300.2,375.1h-97.9V136.8h97.4c43.3,0,71.7,23.4,71.7,59.4c0,25.3-19.1,47.9-43.5,51.8v1.3c33.2,3.6,55.5,26.6,55.5,58.3 C383.4,349.7,352.1,375.1,300.2,375.1z M290.2,266.4h-50.1v78.4h52.3c34.2,0,52.3-13.7,52.3-39.5 C344.7,279.6,326.1,266.4,290.2,266.4z"/></svg>											</div>
+											<div class="text">Bootstrap</div>
+										</div>
+									</li>
+									<li>
+										<div class="li_wrap">
+											<div class="icon">
+												<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M61.7 169.4l101.5 278C92.2 413 43.3 340.2 43.3 256c0-30.9 6.6-60.1 18.4-86.6zm337.9 75.9c0-26.3-9.4-44.5-17.5-58.7-10.8-17.5-20.9-32.4-20.9-49.9 0-19.6 14.8-37.8 35.7-37.8.9 0 1.8.1 2.8.2-37.9-34.7-88.3-55.9-143.7-55.9-74.3 0-139.7 38.1-177.8 95.9 5 .2 9.7.3 13.7.3 22.2 0 56.7-2.7 56.7-2.7 11.5-.7 12.8 16.2 1.4 17.5 0 0-11.5 1.3-24.3 2l77.5 230.4L249.8 247l-33.1-90.8c-11.5-.7-22.3-2-22.3-2-11.5-.7-10.1-18.2 1.3-17.5 0 0 35.1 2.7 56 2.7 22.2 0 56.7-2.7 56.7-2.7 11.5-.7 12.8 16.2 1.4 17.5 0 0-11.5 1.3-24.3 2l76.9 228.7 21.2-70.9c9-29.4 16-50.5 16-68.7zm-139.9 29.3l-63.8 185.5c19.1 5.6 39.2 8.7 60.1 8.7 24.8 0 48.5-4.3 70.6-12.1-.6-.9-1.1-1.9-1.5-2.9l-65.4-179.2zm183-120.7c.9 6.8 1.4 14 1.4 21.9 0 21.6-4 45.8-16.2 76.2l-65 187.9C426.2 403 468.7 334.5 468.7 256c0-37-9.4-71.8-26-102.1zM504 256c0 136.8-111.3 248-248 248C119.2 504 8 392.7 8 256 8 119.2 119.2 8 256 8c136.7 0 248 111.2 248 248zm-11.4 0c0-130.5-106.2-236.6-236.6-236.6C125.5 19.4 19.4 125.5 19.4 256S125.6 492.6 256 492.6c130.5 0 236.6-106.1 236.6-236.6z"/></svg>
+											</div>
+											<div class="text">Wordpress</div>
+										</div>
+									</li>
+									<li>
+										<div class="li_wrap">
+											<div class="icon">
+												<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#878787}</style><path d="M290.7 311L95 269.7 86.8 309l195.7 41zm51-87L188.2 95.7l-25.5 30.8 153.5 128.3zm-31.2 39.7L129.2 179l-16.7 36.5L293.7 300zM262 32l-32 24 119.3 160.3 32-24zm20.5 328h-200v39.7h200zm39.7 80H42.7V320h-40v160h359.5V320h-40z"/></svg>											</div>
+											<a href="https://stackoverflow.com/users/7025686/apingaway"><div class="text">Stackoverflow</div></a>
+										</div>
+									</li>
+									<li>
+										<div class="li_wrap">
+											<div class="icon"><i class="fas fa-code"></i></div>
+											<div class="text">XML</div>
+										</div>
+									</li>
+									<li>
+										<div class="li_wrap">
+											<div class="icon">
+												<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#757575}</style><path d="M502.285 159.704l-234-156c-7.987-4.915-16.511-4.96-24.571 0l-234 156C3.714 163.703 0 170.847 0 177.989v155.999c0 7.143 3.714 14.286 9.715 18.286l234 156.022c7.987 4.915 16.511 4.96 24.571 0l234-156.022c6-3.999 9.715-11.143 9.715-18.286V177.989c-.001-7.142-3.715-14.286-9.716-18.285zM278 63.131l172.286 114.858-76.857 51.429L278 165.703V63.131zm-44 0v102.572l-95.429 63.715-76.857-51.429L234 63.131zM44 219.132l55.143 36.857L44 292.846v-73.714zm190 229.715L61.714 333.989l76.857-51.429L234 346.275v102.572zm22-140.858l-77.715-52 77.715-52 77.715 52-77.715 52zm22 140.858V346.275l95.429-63.715 76.857 51.429L278 448.847zm190-156.001l-55.143-36.857L468 219.132v73.714z"/></svg>
+											</div>
+											<a href="https://codepen.io/your-work?cursor=ZD0xJm89MCZwPTEmdj02MDk2NzM4MA==">												<div class="text">Codepen</div>
+											</a>
+										</div>
+									</li>
+									<li>
+										<div class="li_wrap">
 											<div class="icon"><i class="fas fa-database"></i></div>
 											<div class="text">SQL</div>
 										</div>
 									</li>
 									<li>
 										<div class="li_wrap">
-											<div class="icon"><i class="fab fa-git"></i>></div>
+											<div class="icon"><i class="fab fa-git"></i></div>
 											<div class="text">Git</div>
 										</div>
 									</li>
@@ -431,10 +478,9 @@
 															<br>
 															<br>
 															Софтуерен разработчик, QA и управление на продукт, отговорен
-															за създаването на Динамични договорни документи (отпечатъци
-															от API) и тяхната интеграция чрез API, както и за
+															за създаването на Динамични договорни документи (разпечатване на документи) и тяхната интеграция чрез API, както и за
 															осигуряването на качеството на внедрените промени в
-															системата и отговорен за доставения продукт.
+															системата. 
 															<br>
 														</p>
 													</div>
@@ -521,17 +567,17 @@
 															(фронтенд на големи клиентски изследвания за преживяване)
 															<br>
 															<br>
-															Създаване на спецификации на базата на изисквания, открити
-															по време на фазата на откриване. Изграждане и имплементация
+															Създаване на спецификации на базата на изисквания, уточнени
+															по време на фазата на откриване (discovery phase). Изграждане и имплементация
 															на конфигурация XML, JavaScript (трансформации), обработка
 															на данни и т.н., например изграждане на филтър за
-															неприличия, изчисляване на задоволството на клиентите с
+															обидни думи написани от участниците в проучването, изчисляване на задоволството на клиентите с
 															помощта на JS и др. Локализация и превод за държави от
 															Европейския съюз. Създаване и изпълнение на план за тестване
 															и тестови случаи. Създаване и тестване на данни-шаблони,
 															съответстващи на логиката на имплементацията. Управление на
 															списъци с контрол върху достъпа на една клиентска облачна
-															платформа, създадена ад хок, специално за този клиент.
+															платформа, създадена ад хок, специално за конкретния клиент.
 															Поддръжка на базата данни с въпроси и отговори на клиентите.
 															Например създаване на нови записи с отговори и проектиране
 															на структурата на изследването въз основа на предишни такива
@@ -563,8 +609,8 @@
 															Technischer Analyst im 3rd-Level-Entwicklungssupport
 														</p>
 														<p class="info_title bg hidden">
-															Технически анализатор в поддръжка на развитието на трето
-															ниво
+															Технически анализатор в поддръжка на развитието (Трето
+															ниво)
 														</p>
 														<p class="info_com">
 															Regiocom
@@ -591,7 +637,7 @@
 															използването на Grafana, Logstash Kibana, Java EE,
 															Enterprise APIs, SoapUI, Postman, JSON и XML, GitLab, Git,
 															Github, Git Extensions. Документиране на работния процес и
-															изкарване на тикети в Jira.
+															отразяването му чрез тикети в платформата Jira.
 														</p>
 													</div>
 												</div>
@@ -635,10 +681,9 @@
 															Softwarelebenszyklus in Jira.
 														</p>
 														<p class="info_cont bg hidden">
-															Координиране на процеса по опаковане на софтуерни приложения
-															на банката Windows Server 2016, администриране на Windows
-															System и няколко технологии за масово разпространение на
-															софтуер и проследяване на жизнения цикъл на софтуера в Jira.
+															Координиране на процеса по пакетиране на софтуерни приложения
+															на банката. Администрация на Windows Server 2016, и няколко технологии за масово разпространение (масов деплоймънт) на
+															софтуер, както и проследяването на жизнения цикъл на софтуера в Jira.
 														</p>
 													</div>
 												</div>
@@ -699,7 +744,7 @@
 															Sysinternals, cmd.exe, PowerShell App Deployment Toolkit, usw.
 														</p>
 														<p class="info_cont bg hidden">
-															член на екип за опаковане на софтуер, който подготвя приложения, актуализации на сигурността и кръпки, плъгини и добавки за популярни приложения за масово внедряване, като използва различни технологии за внедряване.
+															Член на екип за пакетиране на софтуер, който подготвя приложения, актуализации на сигурността и кръпки (патчове), плъгини и добавки за популярни приложения за масово внедряване, като използва различни технологии за внедряване.
 - Пакетиране на приложения за Office 365 и Adobe
 - Валидиране на източника (валидиране и тестване на файлове .msi)
 - Тестване на кръпки и актуализации
@@ -876,5 +921,50 @@ Sysinternals, cmd.exe, PowerShell App Deployment Toolkit и др.
 				</div>
 			</div>
 		</div>
+		<!-- Make sure to include jQuery library before this script -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<script>
+    // Get the profile picture container
+    var container = $("#profile-pic-container");
+
+    // Set up mousemove event
+    container.on("mousemove", function (event) {
+        // Get the mouse position relative to the container
+        var mouseX = event.pageX - container.offset().left;
+        var mouseY = event.pageY - container.offset().top;
+
+        // Calculate the distance of the mouse from the center of the container
+        var distanceX = mouseX - container.width() / 2;
+        var distanceY = mouseY - container.height() / 2;
+
+        // Calculate the maximum translation values to prevent the border from being visible
+        var maxTranslateX = (container.width() - $("#avatar").width()) / 2;
+        var maxTranslateY = (container.height() - $("#avatar").height()) / 2;
+
+        // Calculate the translation values for the image
+        var translateX = Math.min(Math.max(distanceX * 0.1, -maxTranslateX), maxTranslateX);
+        var translateY = Math.min(Math.max(distanceY * 0.1, -maxTranslateY), maxTranslateY);
+
+        // Apply the translation and zooming to the image
+        $("#avatar").css({
+            transform: "translate(" + translateX + "px, " + translateY + "px) scale(1.2)",
+        });
+    });
+
+    // Add zoom effect on hover
+    container.on("mouseenter", function () {
+        $("#avatar").addClass("zoomed");
+    });
+
+    // Remove zoom effect and reset position when mouse leaves the container
+    container.on("mouseleave", function () {
+        $("#avatar").removeClass("zoomed");
+        $("#avatar").css({
+            transform: "translate(0, 0) scale(1)",
+        });
+    });
+</script>
+
 </body>
 </html>
