--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<script type="text/javascript" src="./experiences.js"></script>
 	<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 	<script type="text/javascript" src="./language.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="dynamic.js"></script>
 </head>
 <body>
 	<div class="wrapper">
@@ -89,7 +91,7 @@
 										</div>
 									</li>
 									<li>
-										<div class="li_wrap">
+										<div class="li_wrap tooltip">
 											<div class="icon"><button class="print-button" ontouchstart="window.print()"
 													onclick="window.print()"><span
 														class="print-icon"></span></button></i></div>
@@ -108,13 +110,13 @@
 													печат
 												</div>
 											</div>
-											<div class="tooltip en questionmark">
+											<div class="en questionmark">
 												<span class="questionmark">&nbsp?</span>
 												<span class="tooltiptext">* Printing an A4 page adds to humanity's bill
 													circa 10L of water, 6g CO2, 10Wh energy or 10g wood pulp (fraction
 													of a tree).</span>
 											</div>
-											<div class="tooltip de hidden questionmark"> <span
+											<div class="de hidden questionmark"> <span
 													class="questionmark">&nbsp?</span>
 
 												<span class="tooltiptext">* Das Drucken einer A4-Seite verbraucht etwa
@@ -122,7 +124,7 @@
 													Wattstunden Energie oder 10 Gramm Holzzellstoff (ein Bruchteil eines
 													Baumes).</span>
 											</div>
-											<div class="tooltip bg hidden questionmark"> <span
+											<div class="bg hidden questionmark"> <span
 													class="questionmark">&nbsp?</span>
 
 												<span class="tooltiptext">* Принтирането на една A4 страница изразходва
@@ -152,6 +154,14 @@
 												<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#828282}</style><path d="M64 0C28.7 0 0 28.7 0 64V448c0 35.3 28.7 64 64 64H320c35.3 0 64-28.7 64-64V160H256c-17.7 0-32-14.3-32-32V0H64zM256 0V128H384L256 0zM80 64h64c8.8 0 16 7.2 16 16s-7.2 16-16 16H80c-8.8 0-16-7.2-16-16s7.2-16 16-16zm0 64h64c8.8 0 16 7.2 16 16s-7.2 16-16 16H80c-8.8 0-16-7.2-16-16s7.2-16 16-16zm54.2 253.8c-6.1 20.3-24.8 34.2-46 34.2H80c-8.8 0-16-7.2-16-16s7.2-16 16-16h8.2c7.1 0 13.3-4.6 15.3-11.4l14.9-49.5c3.4-11.3 13.8-19.1 25.6-19.1s22.2 7.7 25.6 19.1l11.6 38.6c7.4-6.2 16.8-9.7 26.8-9.7c15.9 0 30.4 9 37.5 23.2l4.4 8.8H304c8.8 0 16 7.2 16 16s-7.2 16-16 16H240c-6.1 0-11.6-3.4-14.3-8.8l-8.8-17.7c-1.7-3.4-5.1-5.5-8.8-5.5s-7.2 2.1-8.8 5.5l-8.8 17.7c-2.9 5.9-9.2 9.4-15.7 8.8s-12.1-5.1-13.9-11.3L144 349l-9.8 32.8z"/></svg>
 											</div>
 											<a href="https://drive.google.com/drive/folders/1ucd39BUvudhFPcU2wkPCxiRNqByHYWva?usp=drive_link"><div class="text">Certifications</div></a>
+										</div>
+									</li>
+									<li>
+										<div class="li_wrap">
+											<div class="icon">
+												<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M272 384c9.6-31.9 29.5-59.1 49.2-86.2l0 0c5.2-7.1 10.4-14.2 15.4-21.4c19.8-28.5 31.4-63 31.4-100.3C368 78.8 289.2 0 192 0S16 78.8 16 176c0 37.3 11.6 71.9 31.4 100.3c5 7.2 10.2 14.3 15.4 21.4l0 0c19.8 27.1 39.7 54.4 49.2 86.2H272zM192 512c44.2 0 80-35.8 80-80V416H112v16c0 44.2 35.8 80 80 80zM112 176c0 8.8-7.2 16-16 16s-16-7.2-16-16c0-61.9 50.1-112 112-112c8.8 0 16 7.2 16 16s-7.2 16-16 16c-44.2 0-80 35.8-80 80z"/></svg>
+											</div>
+											<a href="portfolio.html"><div class="text">Projects & Ideas</div></a>
 										</div>
 									</li>
 									<li>
@@ -431,7 +441,7 @@
 											Образование</div>
 									</div>
 								</div>
-								<div style="visiblity: hidden;"><br><br></div>
+								<div style="visibility: hidden;"><br><br></div>
 
 								<div id="experience-panel" class="panel">
 
@@ -497,13 +507,13 @@
 											<li>
 												<div class="li_wrap">
 													<div class="date en">
-														June 2021 - Present
+														June 2021 - January 2022
 													</div>
 													<div class="date de hidden">
-														Juni 2021 - bis jetzt
+														Juni 2021 - Januar 2022
 													</div>
 													<div class="date bg hidden">
-														юни 2021 - до момента
+														юни 2021 - януари 2022
 													</div>
 													<div class="info">
 														<p class="info_title en">
