change the carousel pic for the calc

--- a/portfolio.html
+++ b/portfolio.html
@@ -262,7 +262,7 @@ a:hover {
                                         <div class="carousel-caption carousel-content">
                                             <h3>Pioner Gallery</h3>
                                             <p>A web media platform for journalists to collaborate. I am working on implementing new features.</p>
-                                            <button type="button" class="btn btn-link">Link</button> <!-- Additional button -->
+                                            <button type="button" class="btn btn-link"><a href="http://yamadasan.pythonanywhere.com/">Link</a></button> 
                                         </div>
                                     </div>
                                     <div class="carousel-item">
@@ -272,7 +272,7 @@ a:hover {
                                         <div class="carousel-caption carousel-content">
                                             <h3>Hotreels</h3>
                                             <p>An actual HotWheels toy store for all ages. It is under construction now.</p>
-                                            <button type="button" class="btn btn-link">Link</button> <!-- Additional button -->
+                                            <button type="button" class="btn btn-link"><a href="https://gitlab.com/ivn-svn/hotwheelsbg">Link</a></button>  
                                         </div>
                                     </div>
                                     <div class="carousel-item">
@@ -282,7 +282,7 @@ a:hover {
                                         <div class="carousel-caption carousel-content">
                                             <h3>My very first website project</h3>
                                             <p>This was my first ever attempt to create a baisc webpage which I created for my Erasmus semester in Wilhelmshaven, Germany in 2015. It looks rather simplistic and awkward but I am proud of this experience. I have gone a long way eversince. Not to mention the disastrous grammar mistakes that seem even somewhat cute to me now, reminding me of my first days of learning the language. :)</p>
-                                            <button type="button" class="btn btn-link"><a href="https://ivn-svn.github.io/djs2016.github.io/">Link</a></button> <!-- Additional button -->
+                                            <button type="button" class="btn btn-link"><a href="https://ivn-svn.github.io/djs2016.github.io/">Link</a></button> 
                                         </div>
                                     </div>
                                     <div class="carousel-item">
@@ -292,7 +292,7 @@ a:hover {
                                         <div class="carousel-caption carousel-content">
                                             <h3>My first Python Flask project</h3>
                                             <p>This is a very simple Flask app to calculate your travel expenses.</p>
-                                            <button type="button" class="btn btn-link"><a href="https://ivsvetlin.pythonanywhere.com/">Link</a></button> <!-- Additional button -->
+                                            <button type="button" class="btn btn-link"><a href="https://ivsvetlin.pythonanywhere.com/">Link</a></button> 
                                         </div>
                                     </div>
                                 </div>
