add qr feature on print

--- a/index.html
+++ b/index.html
@@ -939,6 +939,19 @@ Sysinternals, cmd.exe, PowerShell App Deployment Toolkit и др.
 				</div>
 			</div>
 		</div>
+		<!-- QR part -->
+		<div style="visibility: hidden; padding: 50px;"></div>
+		<div class="qr-div">
+			<img src="qr.png" alt="QR Code" id="qr">
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<div><a href="https://ivn-svn.github.io/ivn-svn.ml/"> Source:  ivn-svn.github.io/ivn-svn.ml</a></div>
+			
+		</div>
+		<!-- QR part end -->
 		<!-- Make sure to include jQuery library before this script -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
