correct avatar issue on media devices

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport">
+
 	<title>Svetlin's CV</title>
 	<link rel="stylesheet" href="./styles.css">
 	<link rel="stylesheet" href="./language.css">
