--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
 											<div class="icon">
 												<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#828282}</style><path d="M64 0C28.7 0 0 28.7 0 64V448c0 35.3 28.7 64 64 64H320c35.3 0 64-28.7 64-64V160H256c-17.7 0-32-14.3-32-32V0H64zM256 0V128H384L256 0zM80 64h64c8.8 0 16 7.2 16 16s-7.2 16-16 16H80c-8.8 0-16-7.2-16-16s7.2-16 16-16zm0 64h64c8.8 0 16 7.2 16 16s-7.2 16-16 16H80c-8.8 0-16-7.2-16-16s7.2-16 16-16zm54.2 253.8c-6.1 20.3-24.8 34.2-46 34.2H80c-8.8 0-16-7.2-16-16s7.2-16 16-16h8.2c7.1 0 13.3-4.6 15.3-11.4l14.9-49.5c3.4-11.3 13.8-19.1 25.6-19.1s22.2 7.7 25.6 19.1l11.6 38.6c7.4-6.2 16.8-9.7 26.8-9.7c15.9 0 30.4 9 37.5 23.2l4.4 8.8H304c8.8 0 16 7.2 16 16s-7.2 16-16 16H240c-6.1 0-11.6-3.4-14.3-8.8l-8.8-17.7c-1.7-3.4-5.1-5.5-8.8-5.5s-7.2 2.1-8.8 5.5l-8.8 17.7c-2.9 5.9-9.2 9.4-15.7 8.8s-12.1-5.1-13.9-11.3L144 349l-9.8 32.8z"/></svg>
 											</div>
-											<a href="https://drive.google.com/drive/folders/1ucd39BUvudhFPcU2wkPCxiRNqByHYWva?usp=drive_link"><div class="text">Certifications</div></a>
+											<a href="https://drive.google.com/drive/folders/1ucd39BUvudhFPcU2wkPCxiRNqByHYWva?usp=drive_link"><div class="text en">Certifications</div></a>
+											<a href="https://drive.google.com/drive/folders/1ucd39BUvudhFPcU2wkPCxiRNqByHYWva?usp=drive_link"><div class="text de hidden">Zertifikate</div></a>
+											<a href="https://drive.google.com/drive/folders/1ucd39BUvudhFPcU2wkPCxiRNqByHYWva?usp=drive_link"><div class="text bg hidden">Сертификации и допълнителна квалификация</div></a>
 										</div>
 									</li>
 									<li>
@@ -163,7 +165,9 @@
 											<div class="icon">
 												<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M272 384c9.6-31.9 29.5-59.1 49.2-86.2l0 0c5.2-7.1 10.4-14.2 15.4-21.4c19.8-28.5 31.4-63 31.4-100.3C368 78.8 289.2 0 192 0S16 78.8 16 176c0 37.3 11.6 71.9 31.4 100.3c5 7.2 10.2 14.3 15.4 21.4l0 0c19.8 27.1 39.7 54.4 49.2 86.2H272zM192 512c44.2 0 80-35.8 80-80V416H112v16c0 44.2 35.8 80 80 80zM112 176c0 8.8-7.2 16-16 16s-16-7.2-16-16c0-61.9 50.1-112 112-112c8.8 0 16 7.2 16 16s-7.2 16-16 16c-44.2 0-80 35.8-80 80z"/></svg>
 											</div>
-											<a href="portfolio.html"><div class="text">Projects & Ideas</div></a>
+											<a href="portfolio.html"><div class="text en">Projects & Ideas</div></a>
+											<a href="portfolio.html"><div class="text de hidden">Projekte & Ideen</div></a>
+											<a href="portfolio.html"><div class="text bg hidden">Проекти & идеи</div></a>
 										</div>
 									</li>
 									<li>
@@ -809,9 +813,16 @@ Sysinternals, cmd.exe, PowerShell App Deployment Toolkit и др.
 															2017 - 2019
 														</div>
 														<div class="info">
-															<p class="info_title">
+															<p class="info_title en">
 																Lived & worked abroad
 															</p>
+															<p class="info_title de hidden">
+																Gelebt & gearbeitet international 
+															</p>
+															<p class="info_title bg hidden">
+																Живял и работил в чужбина
+															</p>
+
 															<p class="info_com en">
 																Chemnitz, Germany <br><br> Lisbon, Portugal <br><br>
 																Berlin, Germany <br><br>
