add missing translations

--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@ Sysinternals, cmd.exe, PowerShell App Deployment Toolkit и др.
 																Fakultät für Medien und Massenkommunikation
 															</p>
 															<p class="info_com bg hidden">
-																Faculty of Media and Mass Communication
+																Факултет по журналистика и масова комуникация (ФЖМК), СУ "Климент Охридски"
 															</p>
 															<p class="info_cont en">
 																I specialised in International Relations, Data
@@ -924,8 +924,14 @@ Sysinternals, cmd.exe, PowerShell App Deployment Toolkit и др.
 															2008 - 2012
 														</div>
 														<div class="info">
-															<p class="info_title">
+															<p class="info_title en">
 																18 high-school William Gladstone, Sofia
+															</p>
+															<p class="info_title de hidden">
+																18-tes Sprachgymnasium William Gladstone, Sofia
+															</p>
+															<p class="info_title bg hidden">
+																18-то СОУ Уилям Гладстон
 															</p>
 															<p class="info_com en">
 																Natural Science & Informatics / STEM
