--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.4); /* Semi-transparent black overlay */
+            background: rgba(0, 0, 0, 0.4);
+            /* Semi-transparent black overlay */
             opacity: 1;
             transition: opacity 0.3s ease-in-out;
         }
@@ -136,105 +137,98 @@
             /* White color for active bullet */
         }
 
-/* Style the <h3> and <p> elements inside the carousel caption (initially hidden) */
-    .carousel-caption h3,
-.carousel-caption p {
-    color: #ffffff;
-    /* White text color */
-    opacity: 0; /* Initially hidden */
-    transition: opacity 0.3s ease-in-out; /* Smooth opacity transition */
-}
+        /* Style the <h3> and <p> elements inside the carousel caption (initially hidden) */
+        .carousel-caption h3,
+        .carousel-caption p {
+            /* White text color */
+            opacity: 0;
+            /* Initially hidden */
+            transition: opacity 0.3s ease-in-out;
+            /* Smooth opacity transition */
+        }
 
-/* Show the caption elements on hover */
-.carousel-item:hover .carousel-caption h3,
-.carousel-item:hover .carousel-caption p {
-    opacity: 1;
-}
+        /* Show the caption elements on hover */
+        .carousel-item:hover .carousel-caption h3,
+        .carousel-item:hover .carousel-caption p {
+            opacity: 1;
+        }
 
 
         /* Style the link inside the carousel caption */
-        .carousel-caption a.btn-link {
-            color: #fff;
+        .carousel-caption .btn-link {
             /* White text color */
             text-decoration: none;
             /* Remove underlines */
         }
 
 
-/* Initially hide the button */
-.carousel-caption .btn-link {
-    display: none;
-}
+        /* Initially hide the button */
+        .carousel-caption .btn-link {
+            display: none;
+        }
 
-/* Show the button on hover */
-.carousel-item:hover .carousel-caption .btn-link {
-    display: inline-block;
-}
+        /* Show the button on hover */
+        .carousel-item:hover .carousel-caption .btn-link {
+            display: inline-block;
+        }
 
-/* Style the link inside the carousel caption */
-.carousel-caption a.btn-link {
-    color: #fff;
-    /* White text color */
-    text-decoration: none;
-    /* Remove underlines */
-}
-
-/* Style the link on hover (optional) */
-.carousel-caption a.btn-link:hover {
-    text-decoration: underline;
-    /* Add underline on hover */
-}
-
+        /* Style the link inside the carousel caption */
+        .carousel-caption .btn-link {
+            background-color: #fff;
+            color: #fff;
+            text-decoration: none;
+            /* Remove underlines */
+        }
 
         /* Style the link on hover (optional) */
-        .carousel-caption a.btn-link:hover {
+        .carousel-caption:hover .btn-link:hover {
             text-decoration: underline;
+            background-color: #007bff;
+            color: #007bff;
             /* Add underline on hover */
         }
 
-
         a {
-  text-decoration: none;
-  display: inline-block;
-  padding: 8px 16px;
-}
+            text-decoration: none;
+            display: inline-block;
+            padding: 8px 16px;
+        }
 
-a:hover {
-  background-color: #ddd;
-  color: rgb(120, 171, 238);
-}
+        a:hover {
+            color: rgb(120, 171, 238);
+        }
 
-.previous {
-  background-color: #f1f1f1;
-  width: 60px;
-  height: 40px;
-  color: rgb(80, 80, 80);
-}
+        .previous {
+            background-color: #f1f1f1;
+            width: 60px;
+            height: 40px;
+            color: rgb(80, 80, 80);
+        }
 
-.round {
-  border-radius: 50%;
-}
+        .round {
+            border-radius: 50%;
+        }
 
-.link {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 22px;
-    font-weight: bolder;
-}
+        .link {
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-size: 22px;
+            font-weight: bolder;
+        }
 
-.link:hover {
-    text-decoration: underline !important;
-    transition: background-color 0.3s ease-in-out;
-    background-color: rgb(249, 249, 249);
-    border-radius: 50%;
-}
+        .link:hover {
+            text-decoration: underline !important;
+            transition: background-color 0.3s ease-in-out;
+            background-color: rgb(249, 249, 249);
+            border-radius: 50%;
+        }
     </style>
 </head>
 
 <body>
     <div>
         <a href="index.html" class="link">
-            <i class="fas fa-arrow-left"></i> < CV
-        </a>
+            <i class="fas fa-arrow-left"></i>
+            < CV </a>
     </div>
 
     <div class="wrapper">
@@ -261,38 +255,49 @@ a:hover {
                                         <div class="overlay"></div>
                                         <div class="carousel-caption carousel-content">
                                             <h3>Pioner Gallery</h3>
-                                            <p>A web media platform for journalists to collaborate. I am working on implementing new features.</p>
-                                            <button type="button" class="btn btn-link"><a href="http://yamadasan.pythonanywhere.com/">Link</a></button> 
+                                            <p>A web media platform for journalists to collaborate. I am working on
+                                                implementing new features.</p>
+                                            <button type="button" class="btn btn-link"><a
+                                                    href="http://yamadasan.pythonanywhere.com/">Link</a></button>
                                         </div>
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block w-100 blurry-image"
-                                            src="carousel-images\1.png" alt="First slide">
+                                        <img class="d-block w-100 blurry-image" src="carousel-images\1.png"
+                                            alt="First slide">
                                         <div class="overlay"></div>
                                         <div class="carousel-caption carousel-content">
                                             <h3>Hotreels</h3>
-                                            <p>An actual HotWheels toy store for all ages. It is under construction now.</p>
-                                            <button type="button" class="btn btn-link"><a href="https://gitlab.com/ivn-svn/hotwheelsbg">Link</a></button>  
+                                            <p>An actual HotWheels toy store for all ages. It is under construction now.
+                                            </p>
+                                            <button type="button" class="btn btn-link"><a
+                                                    href="https://gitlab.com/ivn-svn/hotwheelsbg">Link</a></button>
                                         </div>
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block w-100 blurry-image"
-                                            src="carousel-images\drive.png" alt="Second slide">
+                                        <img class="d-block w-100 blurry-image" src="carousel-images\drive.png"
+                                            alt="Second slide">
                                         <div class="overlay"></div>
                                         <div class="carousel-caption carousel-content">
                                             <h3>My very first website project</h3>
-                                            <p>This was my first ever attempt to create a baisc webpage which I created for my Erasmus semester in Wilhelmshaven, Germany in 2015. It looks rather simplistic and awkward but I am proud of this experience. I have gone a long way eversince. Not to mention the disastrous grammar mistakes that seem even somewhat cute to me now, reminding me of my first days of learning the language. :)</p>
-                                            <button type="button" class="btn btn-link"><a href="https://ivn-svn.github.io/djs2016.github.io/">Link</a></button> 
+                                            <p>This was my first ever attempt to create a baisc webpage which I created
+                                                for my Erasmus semester in Wilhelmshaven, Germany in 2015. It looks
+                                                rather simplistic and awkward but I am proud of this experience. I have
+                                                gone a long way eversince. Not to mention the disastrous grammar
+                                                mistakes that seem even somewhat cute to me now, reminding me of my
+                                                first days of learning the language. :)</p>
+                                            <button type="button" class="btn btn-link"><a
+                                                    href="https://ivn-svn.github.io/djs2016.github.io/">Link</a></button>
                                         </div>
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block w-100 blurry-image"
-                                            src="carousel-images\petrol.png" alt="Third slide">
+                                        <img class="d-block w-100 blurry-image" src="carousel-images\petrol.png"
+                                            alt="Third slide">
                                         <div class="overlay"></div>
                                         <div class="carousel-caption carousel-content">
                                             <h3>My first Python Flask project</h3>
                                             <p>This is a very simple Flask app to calculate your travel expenses.</p>
-                                            <button type="button" class="btn btn-link"><a href="https://ivsvetlin.pythonanywhere.com/">Link</a></button> 
+                                            <button type="button" class="btn btn-link"><a
+                                                    href="https://ivsvetlin.pythonanywhere.com/">Link</a></button>
                                         </div>
                                     </div>
                                 </div>
@@ -319,4 +324,5 @@ a:hover {
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
